--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "echarts": "^4.6.0",
     "element-tree-grid": "^0.1.4",
     "element-ui": "^2.15.12",
     "moment": "^2.24.0",
